Bug 114408 - Help text tooltip not displayed in GTK3 while hovering
Summary: Help text tooltip not displayed in GTK3 while hovering
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2017-12-11 14:19 UTC by Xisco Faulí
Modified: 2017-12-26 19:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-12-11 14:19:24 UTC
Steps to reproduce:
1. Open attachment 138366 [details] from bug 114407
2. Put the cursor over the form

Observed behaviour: Nothing happens

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 3af500580b1c82eabd60335c9ebc458a3f68850c
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

and

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.10; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)
Comment 1 Xavier Van Wijmeersch 2017-12-11 16:02:26 UTC
Can reproduce with

Version: 6.1.0.0.alpha0+
Build ID: 523da0bfba2546552b4181e0268f41bc38a1903f
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded

but not with

Version: 6.1.0.0.alpha0+
Build ID: d4a54ec92674773bc0f9358a3d9090915a3c8fb0
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded

maybe only gtk3
Comment 2 Caolán McNamara 2017-12-11 17:21:24 UTC
I imagine its an empty tooltip and the gtk3 signalTooltipQuery has

if (m_aTooltip.isEmpty()
    return false;

that seems fairly reasonable to me, do we really want to show empty tooltips ?
Comment 3 Xisco Faulí 2017-12-11 17:33:55 UTC
(In reply to Caolán McNamara from comment #2)
> I imagine its an empty tooltip and the gtk3 signalTooltipQuery has
> 
> if (m_aTooltip.isEmpty()
>     return false;
> 
> that seems fairly reasonable to me, do we really want to show empty tooltips
> ?

Yep, that's exactly the problem we see in gtk -> bug 114407
Comment 4 raal 2017-12-11 19:23:44 UTC
I can confirm in gtk3. Works in gen, it's not empty help text.

Version: 6.1.0.0.alpha0+
Build ID: aa28b54ab568fb7160095bb4a2fec338b1398b43
Comment 5 Caolán McNamara 2017-12-12 14:13:42 UTC
I think the rectangle describing the thing that needs a tooltip, which is what gtk3 uses, is wrong here, but the gtk2 (and other impls) take the (correct) mouse position instead which is why they work
Comment 6 Commit Notification 2017-12-12 20:37:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6315b8cbbd7b7e67d824e1dba4414bdf61e3e061

tdf#114408 set correct tooltip rectangle

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2017-12-15 11:05:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b100b78ccb24a4f8da51433f535030facb77705&h=libreoffice-6-0

tdf#114408 set correct tooltip rectangle

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2017-12-26 19:20:18 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 2bf1cc7372088ec31ac5f0fb60de57feda59d3b7
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

Thanks Caolán!