tdf#114408 set correct tooltip rectangle

The original code tried to get the position of the window relative
to its parent and then ask the parent to adjust that position to
a position relative to the toplevel. But the position to use in
that case should have be WindowImpl::nX/WindowImpl::nY not GetPosPixel()

Much easier to just directly ask the the current window for its position
relative to the toplevel.

Change-Id: Iff202f052bc651a8c0e3a57ff3322e5e2a3e4b9a
Reviewed-on: https://gerrit.libreoffice.org/46314
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>